--- a/src/webview/barview/style.css
+++ b/src/webview/barview/style.css
@@ -1,171 +1,164 @@
-html {
-	box-sizing: border-box;
-	font-size: 13px;
-}
-
-*,
-*:before,
-*:after {
-	box-sizing: inherit;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ol,
-ul {
-	margin: 0;
-	padding: 0;
-	font-weight: normal;
-}
-
-:root {
-	--container-paddding: 20px;
-	--input-padding-vertical: 6px;
-	--input-padding-horizontal: 4px;
-	--input-margin-vertical: 4px;
-	--input-margin-horizontal: 0;
-	--image-select: #d632f7;
-}
-
 body {
-	padding: 0 var(--container-paddding);
-	color: var(--vscode-foreground);
-	font-size: var(--vscode-font-size);
-	font-weight: var(--vscode-font-weight);
-	font-family: var(--vscode-font-family);
-	background-color: var(--vscode-editor-background);
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	position: relative;
 }
 
-ol,
-ul {
-	padding-left: var(--container-paddding);
+header.top {
+	margin: 0;
+	min-height: 50px;
+    margin-bottom: 10px;
+	padding-top: var(--input-padding-vertical);
+	position: sticky;
+	top: 0;
 }
 
-body > *,
-form > * {
-	margin-block-start: var(--input-margin-vertical);
-	margin-block-end: var(--input-margin-vertical);
+button.button {
+    display: block;
+	max-width: 350px;
+    border: none;
+    margin: 0 auto;
 }
 
-*:focus {
-	outline-color: var(--vscode-focusBorder) !important;
+nav.list {
+	flex: 1;
 }
 
-a {
-	color: var(--vscode-textLink-foreground);
+nav.list > img {
+	pointer-events: none;
 }
 
-a:hover,
-a:active {
-	color: var(--vscode-textLink-activeForeground);
-}
-
-code {
-	font-size: var(--vscode-editor-font-size);
-	font-family: var(--vscode-editor-font-family);
-}
-
-/* button */
-button {
-	border: none;
-	padding: var(--input-padding-vertical) var(--input-padding-horizontal);
-	width: 100%;
+/* 图片列表容器 */
+div.image-container {
+    width: 95%;
+	max-width: 333px;
+    border-radius: 5px;
+    margin: 0 auto;
 	text-align: center;
-	outline: 1px solid transparent;
-	outline-offset: 2px !important;
-	color: var(--vscode-button-foreground);
-	background: var(--vscode-button-background);
+    padding: var(--input-padding-vertical) var(--input-padding-horizontal);
+    border: 2px solid transparent;
+	overflow: hidden;
+	transition: border .3s ease;
+	position: relative;
 }
 
-button:hover {
-	cursor: pointer;
-	background: var(--vscode-button-hoverBackground);
+div.image-container.image-delete {
+	opacity: 0;
+	animation: image-delete .3s ease;
 }
 
-button:focus {
-	outline-color: var(--vscode-focusBorder);
-}
-
-button.secondary {
-	color: var(--vscode-button-secondaryForeground);
-	background: var(--vscode-button-secondaryBackground);
-}
-
-button.secondary:hover {
-	background: var(--vscode-button-secondaryHoverBackground);
-}
-
-input:not([type='checkbox']),
-textarea {
-	display: block;
-	width: 100%;
-	border: none;
-	font-family: var(--vscode-font-family);
-	padding: var(--input-padding-vertical) var(--input-padding-horizontal);
-	color: var(--vscode-input-foreground);
-	outline-color: var(--vscode-input-border);
-	background-color: var(--vscode-input-background);
-}
-
-input::placeholder,
-textarea::placeholder {
-	color: var(--vscode-input-placeholderForeground);
-}
-
-/* img */
-img {
-	max-width: 90%;
-	max-height: 150px;
-	padding: var(--input-padding-vertical) var(--input-padding-horizontal);
-	border: 2px solid transparent;
-	margin: 0 auto;
-}
-
-img:hover {
+div.image-container:hover {
 	cursor: pointer;
 }
 
-img:not(.select):hover {
+.image-container:not(.select):hover {
 	border-color: var(--vscode-imagePreview-border);
 }
 
-img.select {
+.image-container.select {
 	border-color: var(--image-select);
 }
 
-.main {
-    background-color: antiquewhite;
+div.image-container:not(:last-child) {
+	margin-bottom: 5px;
 }
 
-.main-button {
-    display: block;
-    border: none;
-    margin: 0 auto;
-    margin-bottom: 50px;
+div.image-container > img.image {
+	user-select: none;
+	max-width: 90%;
+	max-height: 150px;
+	animation: image-add .3s ease;
 }
 
-div.image {
-    width: 95%;
-    border-radius: 5px;
-    margin: 0 auto;
-    padding: var(--input-padding-vertical) var(--input-padding-horizontal);
-    border: 2px solid transparent;
-}
-
-div.image:hover {
+/* 图片操作 */
+div.image-container > span.image-operation {
 	cursor: pointer;
+	display: inline-block;
+	font-size: 2.2rem;
+	width: 2.2rem;
+	height: 2.2rem;
+	border-radius: 50%;
+	position: absolute;
+	top: 10px;
+	opacity: .4;
+	transition: opacity .1s ease;
 }
 
-.image:not(.select):hover {
-	border-color: var(--vscode-imagePreview-border);
+/* 公用样式 */
+div.image-container > span.image-operation::before,
+div.image-container > span.image-operation::after {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-.image.select {
-	border-color: var(--vscode-terminal-selectionBackground);
+div.image-container > span.image-operation::before {
+	z-index: 2;
+}
+div.image-container > span.image-operation::after {
+	color: transparent;
+	z-index: 1;
+}
+
+div.image-container > span.image-operation:hover {
+	opacity: 1;
+}
+
+div.image-container > span.image-operation:active {
+	opacity: .6;
+}
+
+/* 未选中按钮 */
+div.image-container > span.image-select {
+	color: #fff;
+	left: 10px;
+}
+
+/* 删除按钮 */
+div.image-container > span.image-delete {
+	color: var(--vscode-inputValidation-errorBorder);
+	right: 10px;
+}
+div.image-container > span.image-delete::after {
+	color: #fff;
+}
+
+/* 选中按钮 */
+div.image-container > span.image-select.select {
+	opacity: 1;
+	color: var(--vscode-editorWarning-foreground);
+	right: 10px;
+}
+div.image-container > span.image-select.select::before {
+	content: "\e730";
+}
+div.image-container > span.image-select.select::after {
+	color: #fff;
+}
+
+
+/* 动画部分 */
+@keyframes image-delete {
+	from {
+		opacity: 1;
+		max-height: 150px;
+	}
+	to {
+		opacity: 0;
+		max-height: 0;
+		margin-bottom: 0;
+	}
+}
+
+@keyframes image-add {
+	from {
+		opacity: 0;
+		max-height: 0;
+	}
+	to {
+		opacity: 1;
+		max-height: 150px;
+	}
 }
