--- a/src/webview/reset.css
+++ b/src/webview/reset.css
@@ -1,6 +1,6 @@
 html {
 	box-sizing: border-box;
-	font-size: 13px;
+	font-size: 10px;
 }
 
 *,
@@ -22,4 +22,47 @@ ul {
 	margin: 0;
 	padding: 0;
 	font-weight: normal;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+/* icon */
+@font-face {
+    font-family: "icon-ali";
+    src: url('#iconfont/icon/iconfont.woff2') format('woff2'),
+		url('#iconfont/icon/iconfont.woff') format('woff'),
+		url('#iconfont/icon/iconfont.ttf') format('truetype');
+}
+
+[class*=" icon-"],
+[class^=icon-],
+.iconfont {
+    font-family: "icon-ali" !important;
+    font-size: 16px;
+    font-style: normal;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+    vertical-align: bottom;
+    display: inline-block;
+}
+
+/* 删除 &#xe8e1; */
+.icon-delete::before {
+	content: "\e8e1";
+}
+
+/* 选中 &#xe730; */
+.icon-select::before {
+	content: "\e730";
+}
+
+/* 圆形背景 &#xec44; */
+.icon-circle-background::before,
+.icon-circle-background::after,
+.icon-delete::after,
+.icon-select::after {
+	content: "\ec44";
 }
