webview图片列表插入延迟动画

--- a/src/webview/barview/css/style.css
+++ b/src/webview/barview/css/style.css
@@ -54,11 +54,11 @@ div.image-container:hover {
 	cursor: pointer;
 }
 
-.image-container:not(.select):hover {
+div.image-container:not(.select):hover {
 	border-color: var(--vscode-imagePreview-border);
 }
 
-.image-container.select {
+div.image-container.select {
 	border-color: var(--image-select);
 }
 
@@ -70,7 +70,7 @@ div.image-container > img.image {
 	user-select: none;
 	max-width: 90%;
 	max-height: 150px;
-	animation: image-add .3s ease;
+	animation: image-add .5s ease;
 }
 
 /* 图片操作 */
@@ -84,7 +84,7 @@ div.image-container > span.image-operation {
 	position: absolute;
 	top: 0;
 	opacity: .4;
-	transition: opacity .1s ease;
+	transition: opacity .3s ease;
 }
 
 /* 公用样式 */
@@ -104,7 +104,7 @@ div.image-container > span.image-operation::after {
 	z-index: 1;
 }
 
-div.image-container > span.image-operation:hover {
+div.image-container:hover > span.image-operation {
 	opacity: 1;
 }
 
