webview添加队列处理，图片列表加载是一个异步过程，加载过程中对图片的操作放入队列中等待依次执行

--- a/src/webview/barview/css/style.css
+++ b/src/webview/barview/css/style.css
@@ -158,9 +158,11 @@ div.image-container > span.image-select.select::after {
 	from {
 		opacity: 0;
 		max-height: 0;
+		overflow: hidden;
 	}
 	to {
 		opacity: 1;
 		max-height: 150px;
+		overflow: visible;
 	}
 }
