--- a/src/webview/background/css/style.css
+++ b/src/webview/background/css/style.css
@@ -43,6 +43,7 @@ div.image-container {
 	overflow: hidden;
 	transition: border .3s ease;
 	position: relative;
+	animation: opacity-show .5s ease;
 }
 
 div.image-container.image-delete {
@@ -138,31 +139,4 @@ div.image-container > span.image-select.select::before {
 }
 div.image-container > span.image-select.select::after {
 	color: #fff;
-}
-
-
-/* 动画部分 */
-@keyframes image-delete {
-	from {
-		opacity: 1;
-		max-height: 150px;
-	}
-	to {
-		opacity: 0;
-		max-height: 0;
-		margin-bottom: 0;
-	}
-}
-
-@keyframes image-add {
-	from {
-		opacity: 0;
-		max-height: 0;
-		overflow: hidden;
-	}
-	to {
-		opacity: 1;
-		max-height: 150px;
-		overflow: visible;
-	}
 }
