网络图片请求方法
webview输入网络地址请求图片并展示

webview页面按钮加锁

网络资源下载有bug，经常会获取不到完整资源

--- a/src/webview/background/css/animation.css
+++ b/src/webview/background/css/animation.css
@@ -34,3 +34,16 @@
         opacity: 1;
     }
 }
+
+@keyframes loading-rotate {
+	from {
+		transform: rotate(0);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.loading-rotate {
+	animation: loading-rotate 1.5s ease infinite;
+}
