封装类名操作统一处理方法，输入框操作按钮在文本为空时不显示

--- a/src/webview/background/css/input.css
+++ b/src/webview/background/css/input.css
@@ -88,6 +88,11 @@ div.input-button {
     height: 100%;
 }
 
+div.icon-container.input-button.hide {
+    overflow: hidden;
+    width: 0;
+}
+
 div.icon-container.input-button > span.iconfont {
     margin-right: 0;
     margin-left: 2px;
