图片初始化和缓存数据对照排序时，需要加上索引为-1的判断，方式死循环
图片列表渲染方式修改，使用proxy双向绑定，优化增删操作

切换储存路径后的页面刷新待完成

添加列表数据加载时的动画和相关文字提示

--- a/src/webview/background/css/style.css
+++ b/src/webview/background/css/style.css
@@ -154,3 +154,27 @@ div.image-container > span.image-select.select::before {
 div.image-container > span.image-select.select::after {
 	color: #fff;
 }
+
+div.image-list-info {
+	line-height: 2rem;
+	font-size: 1.4rem;
+	color: var(--vscode-input-foreground);
+	text-align: center;
+}
+div.image-list-info:not(.show) {
+	display: none;
+}
+
+div.image-list-info > span.iconfont {
+	color: inherit;
+	font-size: inherit;
+	margin-right: 5px;
+}
+div.image-list-info > span.iconfont:not(.show) {
+	display: none;
+}
+
+div.image-list-info > span.info-content {
+	color: inherit;
+	font-size: inherit;
+}
