通过workspace设置configuration数据时，需要异步设置，所有调用函数修改为异步调用
路径修改后webview页面更新错误，原因是上一个问题的异步调用导致，阻塞执行后修复

对图片列表重写的shift和pop方法没有成功删除数据，修改switch内的调用方法

优化webview脚本侧接收通信后的队列执行步骤，完善切换储存路径后的数据更新交互

--- a/src/webview/background/css/style.css
+++ b/src/webview/background/css/style.css
@@ -1,6 +1,11 @@
 /* index(1) */
 
+html {
+	height: 100%;
+}
+
 body {
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
@@ -12,8 +17,7 @@ header.top {
 	min-height: 50px;
     margin-bottom: 10px;
 	padding-top: var(--input-padding-vertical);
-	position: sticky;
-	top: 0;
+	z-index: 100;
 }
 
 button.button {
@@ -39,6 +43,7 @@ button.button:not(.isloading) > span.iconfont {
 
 nav.list {
 	flex: 1;
+	overflow-y: scroll;
 }
 
 nav.list > img {
@@ -62,7 +67,7 @@ div.image-container {
 
 div.image-container.image-delete {
 	opacity: 0;
-	animation: image-delete .3s ease;
+	animation: image-delete .5s ease;
 }
 
 div.image-container:hover {
