webview选中图标的数据改为代理双向绑定更新页面样式
修改删除方法，改为允许批量删除

添加背景图随机切换方法，每次激活扩展后进行判断并随机切换背景

--- a/src/webview/background/css/input.css
+++ b/src/webview/background/css/input.css
@@ -54,6 +54,7 @@ div.info-input {
     outline-width: 1px;
     outline-color: transparent;
     position: relative;
+    border-radius: 2px;
 }
 
 div.info-input.focus {
