1 背景图随机切换优化 2 添加关闭随机切换操作 3 随机状态更改后发送脚本侧数据修改 4 webview页面对随机切换的图片添加特定样式 5 删除图片发送参数改为数组，兼容删除多条数据

--- a/src/webview/background/css/style.css
+++ b/src/webview/background/css/style.css
@@ -112,12 +112,16 @@ div.image-container:hover {
 	cursor: pointer;
 }
 
-div.image-container:not(.select):hover {
+nav.list div.image-container:not(.select):hover {
 	border-color: var(--vscode-imagePreview-border);
 }
 
-div.image-container.select {
+nav.list div.image-container.select {
 	border-color: var(--vscode-gitlens-graphLane4Color);
+}
+
+div.image-container.random {
+	border-color: var(--vscode-tab-unfocusedActiveModifiedBorder);
 }
 
 div.image-container:not(:last-child) {
