webview侧列表图片懒加载 1、webview所有图片路径使用blob 2、通过创建监听使图片进入可视区后再通过通信获取具体数据 3、扩展侧对数据校验的逻辑进行修改，仍有逻辑混乱需要修正

--- a/webview/src/background/css/animation.css
+++ b/webview/src/background/css/animation.css
@@ -44,6 +44,26 @@
 	}
 }
 
+/* 线条过渡动画 */
+@keyframes loading-gradient {
+	from {
+		background-position: 100% 50%;
+	}
+	to {
+		background-position: 0 50%;
+	}
+}
+
+/* 模糊过渡动画 */
+@keyframes blur-transition {
+	from {
+		filter: blur(var(--blur-number));
+	}
+	to {
+		filter: blur(0);
+	}
+}
+
 .loading-rotate {
 	animation: loading-rotate 1.5s ease infinite;
 }
