调整列表删除动画，为多张图片的删除添加滚动样式 有待进一步优化

--- a/webview/src/background/css/animation.css
+++ b/webview/src/background/css/animation.css
@@ -35,6 +35,15 @@
     }
 }
 
+@keyframes opacity-hide {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
 @keyframes loading-rotate {
 	from {
 		transform: rotate(0);
