侧栏列表动画优化 1、调整不定高度展开动画实现方式，改为grid布局动画 2、调整新增图片动画执行时间，加载完图片延迟300毫秒动画时间再加载下一张图片 3、调整删除图片函数内的处理逻辑，使用raf延迟指定时间开始加载删除动画以及删除元素，不再使用css的delay属性 4、多处css布局调整，高度动画统一线性动画

--- a/webview/src/background/css/animation.css
+++ b/webview/src/background/css/animation.css
@@ -4,25 +4,26 @@
 @keyframes image-delete {
 	from {
 		opacity: 1;
-		max-height: 150px;
+		grid-template-rows: 1fr;
+		padding: var(--input-padding-vertical) var(--input-padding-horizontal);
 	}
 	to {
 		opacity: 0;
-		max-height: 0;
-		margin-bottom: 0;
+		grid-template-rows: 0fr;
+		padding: 0 var(--input-padding-horizontal);
 	}
 }
 
 @keyframes image-add {
 	from {
 		opacity: 0;
-		max-height: 0;
-		overflow: hidden;
+		grid-template-rows: 0fr;
+		padding: 0 var(--input-padding-horizontal);
 	}
 	to {
 		opacity: 1;
-		max-height: 150px;
-		overflow: visible;
+		grid-template-rows: 1fr;
+		padding: var(--input-padding-vertical) var(--input-padding-horizontal);
 	}
 }
 
